--- a/ContosoUniversity/Pages/Students/Create.cshtml
+++ b/ContosoUniversity/Pages/Students/Create.cshtml
@@ -1,6 +1,5 @@
 @page
-@using ContosoUniversity.Pages.Students
-@model ContosoUniversity.Pages.Students.CreateModel
+@model Students.CreateModel
 
 @{
     ViewData["Title"] = "Create";
@@ -15,19 +14,19 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Student.LastName" class="control-label"></label>
-                <input asp-for="Student.LastName" class="form-control" />
-                <span asp-validation-for="Student.LastName" class="text-danger"></span>
+                <label asp-for="@Model.Student.LastName" class="control-label"></label>
+                <input asp-for="@Model.Student.LastName" class="form-control" />
+                <span asp-validation-for="@Model.Student.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.FirstMidName" class="control-label"></label>
-                <input asp-for="Student.FirstMidName" class="form-control" />
-                <span asp-validation-for="Student.FirstMidName" class="text-danger"></span>
+                <label asp-for="@Model.Student.FirstMidName" class="control-label"></label>
+                <input asp-for="@Model.Student.FirstMidName" class="form-control" />
+                <span asp-validation-for="@Model.Student.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.EnrollmentDate" class="control-label"></label>
-                <input asp-for="Student.EnrollmentDate" class="form-control" />
-                <span asp-validation-for="Student.EnrollmentDate" class="text-danger"></span>
+                <label asp-for="@Model.Student.EnrollmentDate" class="control-label"></label>
+                <input asp-for="@Model.Student.EnrollmentDate" class="form-control" />
+                <span asp-validation-for="@Model.Student.EnrollmentDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
