--- a/ContosoUniversity/Pages/Students/Index.cshtml
+++ b/ContosoUniversity/Pages/Students/Index.cshtml
@@ -11,23 +11,44 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+
+<form sp-page="./Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by name:
+            <input type="text" name="SearchString" value ="@Model.CurrentFilter" />
+            <input type="submit" value="Search" class="btn btn-default" />
+            <a asp-page="./Index">Back to full List</a>
+        </p>
+    </div>
+</form>
+
 <table class="table">
     <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Student[0].LastName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Student[0].FirstMidName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Student[0].EnrollmentDate)
-                </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            <a asp-page="./Index" 
+               asp-route-sortOrder="@Model.NameSort"
+               asp-route-currentFilter="@Model.CurrentFilter">
+                @Html.DisplayNameFor(model => model.Student[0].LastName)
+            </a>
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Student[0].FirstMidName)
+        </th>
+        <th>
+            <a asp-page="./Index" 
+               asp-route-sortOrder="@Model.DateSort"
+               asp-route-currentFilter="@Model.CurrentFilter">
+                @Html.DisplayNameFor(model => model.Student[0].EnrollmentDate)
+            </a>
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Student) {
+    @foreach (var item in Model.Student)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
@@ -44,6 +65,26 @@
                 <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
+
+@{
+    var prevState = Model.Student.HasPreviousPage ? "" : "disabled";
+    var nextState = Model.Student.HasNextPage ? "" : "disabled";
+}
+
+<a asp-page="./Index"
+   asp-route-sortOrder="@Model.CurrentSort"
+   asp-route-pageIndex="@(Model.Student.PageIndex - 1)"
+   asp-route-currentFilter="@Model.CurrentFilter"
+   class="btn btn-default @prevState">
+    Previous
+</a>
+<a asp-page="./Index"
+   asp-route-sortOrder="@Model.CurrentSort"
+   asp-route-pageIndex="@(Model.Student.PageIndex + 1)"
+   asp-route-currentFilter="@Model.CurrentFilter"
+   class="btn btn-default @nextState">
+    Next
+</a>
