--- a/ContosoUniversity/Pages/Courses/Details.cshtml
+++ b/ContosoUniversity/Pages/Courses/Details.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContosoUniversity.Pages_Courses.DetailsModel
+@model ContosoUniversity.Pages.Courses.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,6 +11,12 @@
     <h4>Course</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Course.CourseId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Course.CourseId)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Course.Title)
         </dt>
@@ -27,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Course.Department)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Course.Department.DepartmentId)
+            @Html.DisplayFor(model => model.Course.Department.Name)
         </dd>
     </dl>
 </div>
