--- a/ContosoUniversity/Pages/Instructors/Delete.cshtml
+++ b/ContosoUniversity/Pages/Instructors/Delete.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContosoUniversity.Pages_Instructors.DeleteModel
+@model ContosoUniversity.Pages.Instructors.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
