--- a/ContosoUniversity/Pages/Courses/Edit.cshtml
+++ b/ContosoUniversity/Pages/Courses/Edit.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContosoUniversity.Pages_Courses.EditModel
+@model ContosoUniversity.Pages.Courses.EditModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -15,6 +15,10 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Course.CourseId" />
             <div class="form-group">
+                <label asp-for="Course.CourseId" class="control-label"></label>
+                <div>@Html.DisplayFor(model => model.Course.CourseId)</div>
+            </div>
+            <div class="form-group">
                 <label asp-for="Course.Title" class="control-label"></label>
                 <input asp-for="Course.Title" class="form-control" />
                 <span asp-validation-for="Course.Title" class="text-danger"></span>
@@ -25,8 +29,10 @@
                 <span asp-validation-for="Course.Credits" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Course.DepartmentId" class="control-label"></label>
-                <select asp-for="Course.DepartmentId" class="form-control" asp-items="ViewBag.DepartmentId"></select>
+                <label asp-for="Course.Department" class="control-label"></label>
+                <select asp-for="Course.DepartmentId" 
+                        class="form-control" 
+                        asp-items="@Model.DepartmentName"></select>
                 <span asp-validation-for="Course.DepartmentId" class="text-danger"></span>
             </div>
             <div class="form-group">
