--- a/ContosoUniversity/Pages/Instructors/Create.cshtml
+++ b/ContosoUniversity/Pages/Instructors/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContosoUniversity.Pages_Instructors.CreateModel
+@model ContosoUniversity.Pages.Instructors.CreateModel
 
 @{
     ViewData["Title"] = "Create";
@@ -27,6 +27,37 @@
                 <label asp-for="Instructor.HireDate" class="control-label"></label>
                 <input asp-for="Instructor.HireDate" class="form-control" />
                 <span asp-validation-for="Instructor.HireDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Instructor.OfficeAssignment.Location" class="control-label"></label>
+                <input asp-for="Instructor.OfficeAssignment.Location" class="form-control" />
+                <span asp-validation-for="Instructor.OfficeAssignment.Location" class="text-danger" />
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <table>
+                        <tr>
+                        @{
+                            int cnt = 0;
+
+                            foreach (var course in Model.AssignedCourseDataList)
+                            {
+                                if (cnt++ % 3 == 0)
+                                {
+                                    @:</tr><tr>
+                                }
+                                @:<td>
+                                <input type="checkbox"
+                                       name="selectedCourses"
+                                       value="@course.CourseId"
+                                       @(Html.Raw(course.Assigned ? "checked=\"checked\"" : "")) />
+                                @course.CourseId @:  @course.Title
+                                @:</td>
+                            }
+                            @:</tr>
+                        }
+                    </table>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
