--- a/ContosoUniversity/Pages/Instructors/Details.cshtml
+++ b/ContosoUniversity/Pages/Instructors/Details.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContosoUniversity.Pages_Instructors.DetailsModel
+@model ContosoUniversity.Pages.Instructors.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
