--- a/ContosoUniversity/Pages/Instructors/Edit.cshtml
+++ b/ContosoUniversity/Pages/Instructors/Edit.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContosoUniversity.Pages_Instructors.EditModel
+@model ContosoUniversity.Pages.Instructors.EditModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -30,16 +30,47 @@
                 <span asp-validation-for="Instructor.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <label asp-for="Instructor.OfficeAssignment.Location" class="control-label"></label>
+                <input asp-for="Instructor.OfficeAssignment.Location" class="form-control" />
+                <span asp-validation-for="Instructor.OfficeAssignment.Location" class="text-danger"></span>
             </div>
-        </form>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <table>
+                        <tr>
+                            @{
+                                var cnt = 0;
+
+                                foreach (var course in Model.AssignedCourseDataList)
+                                {
+                                    if (cnt++ % 3 == 0)
+                                    {
+                                        @:</tr><tr>
+                                    }
+                                    @:<td>
+                                        <input type="checkbox"
+                                               name="selectedCourses"
+                                               value="@course.CourseId"
+                                               @(Html.Raw(course.Assigned ? "checked=\"checked\"" : "")) />
+                                        @course.CourseId @:  @course.Title
+                                        @:</td>
+                                }
+                                @:</tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+    <div>
+        <a asp-page="./Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
