--- a/ContosoUniversity/Pages/Students/Delete.cshtml
+++ b/ContosoUniversity/Pages/Students/Delete.cshtml
@@ -36,7 +36,7 @@
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Student.ID" />
+        <input type="hidden" asp-for="Student.Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
