--- a/ContosoUniversity/Pages/Students/Details.cshtml
+++ b/ContosoUniversity/Pages/Students/Details.cshtml
@@ -43,7 +43,7 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Course.Title)
+                            @Html.DisplayFor(modelItem => item.CourseTitle)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Grade)
@@ -55,6 +55,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Student.ID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Student.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
