--- a/ContosoUniversity/Pages/Students/Edit.cshtml
+++ b/ContosoUniversity/Pages/Students/Edit.cshtml
@@ -14,7 +14,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Student.ID" />
+            <input type="hidden" asp-for="Student.Id" />
             <div class="form-group">
                 <label asp-for="Student.LastName" class="control-label"></label>
                 <input asp-for="Student.LastName" class="form-control" />
