--- a/ContosoUniversity/Pages/Departments/Delete.cshtml
+++ b/ContosoUniversity/Pages/Departments/Delete.cshtml
@@ -33,10 +33,10 @@
             @Html.DisplayFor(model => model.Department.StartDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Department.RowVersion)
+            @Html.DisplayNameFor(model => model.Department.Version)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Department.RowVersion[7])
+            @Html.DisplayFor(model => model.Department.Version)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Department.Administrator)
@@ -47,8 +47,8 @@
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Department.DepartmentId" />
-        <input type="hidden" asp-for="Department.RowVersion" />
+        <input type="hidden" asp-for="Department.Id" />
+        <input type="hidden" asp-for="Department.Version" />
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             <a asp-page="./Index">Back to List</a>
