--- a/ContosoUniversity/Pages/Instructors/Index.cshtml
+++ b/ContosoUniversity/Pages/Instructors/Index.cshtml
@@ -116,7 +116,7 @@
         {
             <tr>
                 <td>
-                    @item.Student.FullName
+                    @item.StudentName
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Grade)
