--- a/ContosoUniversity/Pages/Courses/Edit.cshtml
+++ b/ContosoUniversity/Pages/Courses/Edit.cshtml
@@ -30,10 +30,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Course.Department" class="control-label"></label>
-                <select asp-for="Course.DepartmentId" 
+                <select asp-for="Course.Department.Id" 
                         class="form-control" 
                         asp-items="@Model.DepartmentName"></select>
-                <span asp-validation-for="Course.DepartmentId" class="text-danger"></span>
+                <span asp-validation-for="Course.Department.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
