--- a/ContosoUniversity/Pages/Departments/Create.cshtml
+++ b/ContosoUniversity/Pages/Departments/Create.cshtml
@@ -29,8 +29,8 @@
                 <span asp-validation-for="Department.StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Department.InstructorId" class="control-label"></label>
-                <select asp-for="Department.InstructorId" class ="form-control" asp-items="ViewBag.InstructorId"></select>
+                <label asp-for="Department.Administrator.Id" class="control-label"></label>
+                <select asp-for="Department.Administrator.Id" class ="form-control" asp-items="@Model.Instructors"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
