--- a/ContosoUniversity/Pages/Departments/Edit.cshtml
+++ b/ContosoUniversity/Pages/Departments/Edit.cshtml
@@ -10,11 +10,11 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Department.DepartmentId" />
-            <input type="hidden" asp-for="Department.RowVersion" />
+            <input type="hidden" asp-for="Department.Id" />
+            <input type="hidden" asp-for="Department.Version" />
             <div class="form-group">
                 <label>RowVersion</label>
-                @Model.Department.RowVersion[7]
+                @Model.Department.Version
             </div>
             <div class="form-group">
                 <label asp-for="Department.Name" class="control-label"></label>
@@ -34,9 +34,9 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Instructor</label>
-                <select asp-for="Department.InstructorId" class="form-control"
+                <select asp-for="Department.Administrator.Id" class="form-control"
                         asp-items="@Model.InstructorNames"></select>
-                <span asp-validation-for="Department.InstructorId" class="text-danger">
+                <span asp-validation-for="Department.Administrator.Id" class="text-danger">
                 </span>
             </div>
             <div class="form-group">
