--- a/ContosoUniversity/Pages/Departments/Index.cshtml
+++ b/ContosoUniversity/Pages/Departments/Index.cshtml
@@ -44,15 +44,15 @@
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
             <td>
+                @item.Version
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Administrator.FullName)
             </td>
             <td>
-                @item.RowVersion[7]
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.DepartmentId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.DepartmentId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.DepartmentId">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
